--- a/week3/fragments_demo/AndroidManifest.xml
+++ b/week3/fragments_demo/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name=".activities.MainActivity"
                   android:label="@string/app_name">
+        </activity>
+        <activity android:name=".activities.DynamicFragmentActivity" android:label="Dynamic">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
