--- a/projects/todoapp/AndroidManifest.xml
+++ b/projects/todoapp/AndroidManifest.xml
@@ -12,5 +12,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".DetailsActivity" android:label="Detalle"/>
     </application>
 </manifest>
